--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.2"
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.0.2",
+    "sequelize": "^6.37.1"
   }
 }
